--- a/CLM/clm_sensitivity.Rmd
+++ b/CLM/clm_sensitivity.Rmd
@@ -9,35 +9,46 @@ library(magrittr)
 library(dplyr)
 library(tidyr)
 library(ggplot2)
+library(cowplot)
 ```
 
 Data are parameter values with corresponding response variable values. 
 
 ```{r}
-vegc <- readr::read_csv("clm5_CIG_C4grass_e101_Annual_mean_TOTVEGC_for_decomposition.csv")
+sens_data <- readr::read_csv("clm5_Equ_C4g_default_ens_e500_output.txt", 
+                                 skip = 1)
+colnames(sens_data) <- gsub(" ", "_", colnames(sens_data))
+sens_data_ex <- sens_data %>% 
+  select(1:10)
 ```
+### Example of Sensitivity Analysis for Single Output Variable
 
-### Elasticity
+#### 1. Elasticity
 
 Sensitivity is the change in the response variable given a change in an input variable, which can be a parameter, initial condition, etc. This is representated by the derivative dY/dX. This is calculated below from the slope of the linear regression between the parameter values and response variable. 
 
 ```{r}
-slopes <- tidy(lm(data = vegc, formula = Annual_mean_TOTVEGC ~ .)) %>% 
-  rename(sensitivity = estimate)
+output_var_name <- tail(colnames(sens_data_ex), 1)
+
+test_form <- as.formula(paste(output_var_name, "~", "."))
+
+slopes <- tidy(lm(data = sens_data_ex, formula = test_form)) %>% 
+  rename(sensitivity = estimate) %>% 
+  filter(term != "(Intercept)")
 ```
 
 Because the units of the derviative are determined by X's units, elasticity is used to standardize sensitivity across variables. Elasticity is dY/dX * (mean X/mean Y). 
 
 ```{r}
-mean_vegc_response <- mean(vegc$Annual_mean_TOTVEGC)
+mean_response <- mean(sens_data_ex$TLAI)
 
-mean_vegc_params <- vegc %>% 
-  select(-Annual_mean_TOTVEGC) %>% 
+mean_params <- sens_data_ex %>% 
+  select(-TLAI) %>% 
   summarise_all(funs(mean)) %>% 
   gather(parameter, mean) %>% 
-  mutate(elasticity_multiplier = mean / mean_vegc_response)
+  mutate(elasticity_multiplier = mean / mean_response)
 
-elasticity <- left_join(slopes, mean_vegc_params, by = c("term" = "parameter")) %>% 
+elasticity <- left_join(slopes, mean_params, by = c("term" = "parameter")) %>% 
   mutate(elasticity = sensitivity * elasticity_multiplier)
 ```
 
@@ -46,17 +57,16 @@ Elasticity values increasingly farther from zero mean change in x is causing inc
 ```{r}
 ggplot(elasticity, aes(x = elasticity, y = term)) +
   geom_point() +
-  geom_vline(xintercept = 0) +
-  lims(x = c(-1, 1))
+  geom_vline(xintercept = 0)
 ```
 
-### Coefficient of Variation
+#### 2. Coefficient of Variation
 
 CV is the normalized parameter variance of all the input parameters. 
 
 ```{r}
-CVs <- vegc %>% 
-  select(-Annual_mean_TOTVEGC) %>% 
+CVs <- sens_data_ex %>% 
+  select(-TLAI) %>% 
   gather(parameter, value) %>% 
   group_by(parameter) %>% 
   summarize(mean = mean(value), 
@@ -68,15 +78,16 @@ CVs <- vegc %>%
 ```{r}
 ggplot(CVs, aes(x = cv, y = parameter)) +
   geom_point() +
-  geom_vline(xintercept = 0)
+  geom_vline(xintercept = 0) +
+  xlab("CV (%)")
 ```
 
-### Explained Standard Deviation
+#### 3. Explained Standard Deviation
 
 How much of the response variable uncertainty is explained by each of the parameters. Incorporates both parameter variance and sensitivity. 
 
 ```{r}
-SDs <- tidy(aov(Annual_mean_TOTVEGC ~ ., data = vegc)) %>% 
+SDs <- tidy(aov(TLAI ~ ., data = sens_data_ex)) %>% 
   mutate(sd = sqrt(sumsq)) %>% 
   select(term, sd)
 ```
@@ -86,3 +97,80 @@ ggplot(SDs, aes(x = sd, y = term)) +
   geom_point() +
   geom_vline(xintercept = 0)
 ```
+
+### Sensitivity Analysis for All Output Variables
+
+
+```{r}
+#function that does all plots and puts together (Cowplot)
+#test on TLAI
+
+output_var_name <- tail(colnames(sens_data_ex), 1)
+
+test_form <- as.formula(paste(output_var_name, "~", "."))
+
+slopes <- tidy(lm(data = sens_data_ex, formula = test_form)) %>% 
+  rename(sensitivity = estimate) %>% 
+  filter(term != "(Intercept)")
+
+plot_sensitivity <- function(data){
+  output_var_name <- tail(colnames(data), 1)
+  print(output_var_name)
+  slopes_formula <- as.formula(paste(output_var_name, "~", "."))
+  print(slopes_formula)
+  slopes <- tidy(lm(data = data, formula = slopes_formula)) 
+  # %>%
+  #   rename(sensitivity = estimate) %>%
+  #   filter(term != "(Intercept)")
+  print(slopes)
+  mean_response <- mean(data[output_var_name])
+  # mean_params <- data %>%
+  #   select(-output_var_name) %>%
+  #   summarise_all(funs(mean)) %>%
+  #   gather(parameter, mean) %>%
+  #   mutate(elasticity_multiplier = mean / mean_response)
+  # elasticity <- left_join(slopes, mean_params, by = c("term" = "parameter")) %>%
+  #   mutate(elasticity = sensitivity * elasticity_multiplier)
+  # elasticity_plot <- ggplot(elasticity, aes(x = elasticity, y = term)) +
+  #   geom_point() +
+  #   geom_vline(xintercept = 0)
+  # 
+  # CVs <- data %>% 
+  #   select(-TLAI) %>% 
+  #   gather(parameter, value) %>% 
+  #   group_by(parameter) %>% 
+  #   summarize(mean = mean(value), 
+  #             var = var(value)) %>% 
+  #   mutate(sd = sqrt(var), 
+  #          cv = (sd / mean) * 100)
+  # CV_plot <- ggplot(CVs, aes(x = cv, y = parameter)) +
+  #   geom_point() +
+  #   geom_vline(xintercept = 0) +
+  #   xlab("CV (%)")
+  # 
+  # SDs <- tidy(aov(TLAI ~ ., data = data)) %>% 
+  #   mutate(sd = sqrt(sumsq)) %>% 
+  #   select(term, sd)
+  # SD_plot <- ggplot(SDs, aes(x = sd, y = term)) +
+  #   geom_point() +
+  #   geom_vline(xintercept = 0)
+  # all_plots <- plot_grid(elasticity_plot, SD_plot, CV_plot, labels = )
+  # print(all_plots)
+}
+
+plot_sensitivity(sens_data_ex)
+
+for(output_var in colnames(sens_data)[10:17]){
+  sens_data_single_out <- sens_data %>% 
+    select(sla:root_dist, output_var)
+  plot_sensitivity(sens_data_single_out)
+}
+
+
+```
+
+```{r}
+#remove other response vars first? 
+#for loop over all reponse vars
+```
+
