--- a/ED2/ed2_in_pecan.Rmd
+++ b/ED2/ed2_in_pecan.Rmd
@@ -6,7 +6,7 @@ output: github_document
 urlcolor: blue
 ---
 
-The specific settings chosen for sections 1-3 of this vignette, including plant functional typea (PFT), sites, and date ranges were chosen as examples to illustrate how to use the PEcAn infrastructure to run the ED2 model. 
+The specific settings chosen for sections 1-3 of this vignette, including plant functional types (PFTs), sites, and date ranges were chosen as examples to illustrate how to use the PEcAn infrastructure to run the ED2 model. 
 
 # 1. ED2 Run Using PEcAn's Virtual Machine
 
