--- a/CLM/clm_sensitivity.Rmd
+++ b/CLM/clm_sensitivity.Rmd
@@ -26,7 +26,12 @@ sens_data_ex <- sens_data %>%
 
 #### 1. Elasticity
 
-Sensitivity is the change in the response variable given a change in an input variable, which can be a parameter, initial condition, etc. This is representated by the derivative dY/dX. This is calculated below from the slope of the linear regression between the parameter values and response variable. 
+Sensitivity is the change in the response variable given a change in an input variable, which can be a parameter, initial condition, etc. This is representated by the derivative dY/dX. This is approximated below as the slope of the linear regression between the parameter values and response variable. This is a quick-and-dirty variant of the [`get.sensitivity`](https://github.com/PecanProject/pecan/blob/develop/modules/uncertainty/R/sensitivity.analysis.R#L73) function in PEcAn.
+
+
+
+
+  
 
 ```{r}
 output_var_name <- tail(colnames(sens_data_ex), 1)
