Add Rd.R function for dark-adapted respiration measurements for outdoor experiments

--- a/parameter_estimation.Rmd
+++ b/parameter_estimation.Rmd
@@ -10,7 +10,8 @@ Load necessary packages and functions.
 library(dplyr)
 source("R/C4_Collatz.R")
 source("R/LRC.R")
-source("R/Gs.R")
+source("R/Gs.R")# or one of the other options
+source("R/Rd.R")
 ```
 
 
@@ -54,6 +55,15 @@ for(i in 1:length(ID)){
 }
 ```
 
+In the case of the 2020 field measurements, only ACi curves and dark-adapted respiration were measured outdoors. Two leaves per plant replicate were covered in foil for ~20 minutes prior to measurement. Due to low sample size, population-level sample means of Rd were caluclated using Rd.R. 
+```{r}
+ID <- expDF$ID[which(expDF$Rd == 1 & expDF$Date > max(params$Date))]
+for(i in 1:length(ID)){
+  Rd(fileID = ID[i])
+  print(paste0(ID[i], " completed"))
+}
+```
+
 Finally, once all three functions above are run and output parameter files produced, they can be collated and combined with the experiment data to produce a final 'parameters_data.csv'. 
 ```{r}
 # Declare empty dataframe
@@ -79,6 +89,14 @@ for(i in 1:length(aq)){
 st <- list.files("outputs/stomatal", pattern = "csv")
 for(i in 1:length(st)){
   temp <- read.csv(paste0("outputs/stomatal/", st[i]),
+                   colClasses = c(rep("character", 3), rep("numeric",3), "character"))
+  params <- rbind.data.frame(params, temp)
+}
+
+# Add Rd
+rd<- list.files("outputs/Rd", pattern = "csv")
+for(i in 1:length(rd)){
+  temp <- read.csv(paste0("outputs/Rd/", rd[i]),
                    colClasses = c(rep("character", 3), rep("numeric",3), "character"))
   params <- rbind.data.frame(params, temp)
 }
