--- a/Bayesian_parameter_estimation.Rmd
+++ b/Bayesian_parameter_estimation.Rmd
@@ -3,11 +3,16 @@ title: "Simultaneous fitting of CO2 and light response curves"
 author: "Jessica Guo"
 output: github_document
 urlcolor: blue
+editor_options: 
+  chunk_output_type: console
 ---
 
 Necessary functions. 
 ```{r}
 source("/home/jessicaguo/pecan/modules/photosynthesis/R/fitA.R")
+library(postjags)
+library(dplyr)
+library(ggplot2)
 ```
 
 The above function is modified from the 'PEcAn.photosynthesis' package to include a Collatz model for C4 photosynthesis and an option for data from the Licor 6800. Retained from the original model include options for fixed and random effects. The function has 5 arguments:
@@ -19,7 +24,141 @@ The above function is modified from the 'PEcAn.photosynthesis' package to includ
     - k.fixed, k.random: fixed and random effects for parameter k, initial slope of CO2 response
     - match: the variable used identify sampling units for random effects and to match the gas-exchange and covariate data for fixed effects. 
     - n.iter: the number of MCMC interations (n.iter). Default is 5000
-##' 
+- pathway, either "C3" or "C4"
+- licor, either "6400" or "6800"
+
+Here, our goal is to test performance of fitA with the Collatz model using the Danforth data. Three sets of data inputs will be used and resulting parameters compared: ACi curve only,  AQ curve only, and ACi & AQ curves simultaneously. As an added check, these parameters will be compared to outputs from "parameter_estimation.Rmd"
+Only the default model will be used here. 
+
+First, extract, label, and combine the ACi and AQ data for each experiment with both datasets. 
+```{r}
+expDF <- read.csv("cleaned_data/experiments.csv",
+                  colClasses = c("character", "numeric", rep("character",2), rep("numeric",2)))
+
+ids <- unique(expDF$ID[which(expDF$A_Ci == 1 & expDF$A_Qin == 1)])
+
+datlist <- list()
+for(i in 1:length(ids)){
+  aci <- read.csv(paste0("cleaned_data/ACi/A_Ci_curves_", ids[i], ".csv"), header=T)
+  aci$type <- rep("ACi", nrow(aci))
+  aci <- subset(aci, select = c("type", "rep", "A", "Pci", "Qin"))
+  
+  aq <- read.csv(paste0("cleaned_data/AQ/AQin_curves_", ids[i], ".csv"), header=T)
+  aq$type <- rep("AQ", nrow(aq))
+  aq <- subset(aq, select = c("type", "rep", "A", "Pci", "Qin"))
+  
+  datlist[[i]] <- rbind(aci, aq)
+}
+```
+
+Each plant replicate will be modeled separately, rather than as a random effect. There are currently 10 datasets with both ACi and AQ data, each measured on 3 plant replicates. A total of 3 sets of thirty outputs wil be recorded, distinguishing 
+```{r}
+# Data types to select
+types <- list("ACi", "AQ", c("ACi", "AQ"))
+
+# simple model
+model <- list(V.fixed = NULL, V.random = NULL, 
+                  a.fixed = NULL, a.random = NULL, 
+                  k.fixed = NULL, k.random = NULL, 
+                  n.iter = 5000, match = "rep")
+out <- list()
+for(i in 1:length(ids)){ # 10 experiments
+  out[[i]] <- list()
+  for(j in 1:3){ # 3 sets of inputs: ACi, AQ, or both
+    out[[i]][[j]] <- list()
+    for(k in 1:3){ # 3 replicate plants per experiment
+        flux.data <- subset(datlist[[i]], rep == paste0("plant_", k) & type %in% types[[j]])
+        out[[i]][[j]][[k]] <- fitA(flux.data = flux.data, pathway = "C4", licor = "6800",
+                                   model = model)
+        print(paste0("Run ", i, "_", j, "_", k, " completed"))
+    }
+  }
+}
+```
+
+
+Summarize the posteriors into long format labeled with ID, type, rep, and trait.  
+```{r}
+types <- c("ACi", "AQ", "both")
+master <- data.frame()
+for(i in 1:length(ids)){
+  for(j in 1:length(types)){
+    for(k in 1:3){
+      sumDF <- coda.fast(out[[i]][[j]][[k]]$params)
+      sumDF$trait <- row.names(sumDF)
+      sumDF <- subset(sumDF, trait %in% c("vmax0", "r0", "alpha0"))
+      sumDF$ID <- rep(ids[i], nrow(sumDF))
+      sumDF$type <- rep(types[j], nrow(sumDF))
+      sumDF$rep <- rep(paste0("plant_", k), nrow(sumDF))
+      master <- rbind.data.frame(master, sumDF)
+    }
+  }
+}
+```
+
+Add in traits from Tonantzin's workflow. 
+```{r}
+# Select vmax, Rd, and AQY for the relevant experiment IDs
+params <- read.csv("outputs/parameters_data.csv")
+add <- subset(params, select = c(ID, rep, trait, Value, SE, SD))
+add <- subset(add, trait %in% c("vmax", "Rd", "AQY") & ID %in% ids)
+
+# Convert traits in master to the same
+masterDF <- master %>%
+  mutate(trait = case_when(trait == "vmax0" ~ "vmax", 
+                           trait == "alpha0" ~ "AQY",
+                           trait == "r0" ~ "Rd")) %>%
+  left_join(add, by = c("ID", "rep", "trait")) %>%
+  select(ID, rep, type, trait, 
+         Value, SE, SD, # traits estimated from Tonantzin's workflow
+         mean, median, sd, pc2.5, pc97.5) #traits from this analysis
+
+# Create another error columnn that is either SE or SD, for plotting purposes only
+masterDF$S2 <- ifelse(is.na(masterDF$SD), masterDF$SE, masterDF$SD)
+```
+
+Create 1:1 figures for each trait with Tonantzin's estimates as the baseline. For vmax, error bars are +/- 1 SD (Bayesian) on the x-axis. For AQY and Rd, error bars are +/- 1 SE (frequentist) on the x-axis. All vertical error bars are are +/- 1 SD (Bayesian). 
+```{r}
+vmaxDF <- subset(masterDF, trait == "vmax")
+fig1 <- ggplot(vmaxDF)+
+  geom_abline(slope = 1, intercept = 0, col="red")+
+  geom_point(aes(x = Value, y = mean))+
+  geom_errorbar(aes(x = Value, ymin = mean - SD, ymax = mean + SD))+
+  geom_errorbarh(aes(y = mean, xmin = Value - S2, xmax = Value + S2))+
+  scale_x_continuous(expression(paste(V[max], " (T)")))+
+  scale_y_continuous(expression(paste(V[max], " (fitA)")))+
+  facet_wrap(~type)+
+  theme_bw(base_size = 14)+
+  coord_fixed()
+print(fig1)
+
+aqyDF <- subset(masterDF, trait == "AQY")
+fig2 <- ggplot(aqyDF)+
+  geom_abline(slope = 1, intercept = 0, col="red")+
+  geom_point(aes(x = Value, y = mean))+
+  geom_errorbar(aes(x = Value, ymin = pc2.5, ymax = pc97.5))+
+  geom_errorbarh(aes(y = mean, xmin = Value - S2, xmax = Value + S2))+
+  scale_x_continuous(expression(paste(alpha, " (T)")))+
+  scale_y_continuous(expression(paste(alpha, " (ftA)")))+
+  facet_wrap(~type)+
+  theme_bw(base_size = 14)+
+  coord_fixed()
+print(fig2)
+
+rdDF <- subset(masterDF, trait == "Rd")
+fig3 <- ggplot(rdDF)+
+  geom_abline(slope = 1, intercept = 0, col="red")+
+  geom_point(aes(x = Value, y = mean))+
+  geom_errorbar(aes(x = Value, ymin = pc2.5, ymax = pc97.5))+
+  geom_errorbarh(aes(y = mean, xmin = Value - S2, xmax = Value + S2))+
+  scale_x_continuous(expression(paste(R[d], " (T)")))+
+  scale_y_continuous(expression(paste(R[d], " (fitA)")))+
+  facet_wrap(~type)+
+  theme_bw(base_size = 14)+
+  coord_fixed()
+print(fig3)
+
+```
 #initial test, null model
 flux.data = dat
 pathway = "C4"
