--- a/Bayesian_parameter_estimation.Rmd
+++ b/Bayesian_parameter_estimation.Rmd
@@ -30,7 +30,7 @@ The above function is modified from the 'PEcAn.photosynthesis' package to includ
 - licor, either "6400" or "6800"
 
 Here, our goal is to test performance of fitA with the Collatz model using the Danforth data. Three sets of data inputs will be used and resulting parameters compared: ACi curve only,  AQ curve only, and ACi & AQ curves simultaneously. As an added check, these parameters will be compared to outputs from "parameter_estimation.Rmd"
-Only the default model will be used here. 
+The default model was likely overparameterized. Therefore, models will be run with plant replicate as the random effect.  
 
 First, extract, label, and combine the ACi and AQ data for each experiment with both datasets. Following Feng and Dietze (2012), only include low light range of the AQ curve, between 0 and 250 umol m^-2 s^-1. Also, remove Pci values < 0; those arise erroneously from a match error that results in a high A and low E. 
 ```{r}
@@ -57,23 +57,20 @@ Each plant replicate will be modeled separately, rather than as a random effect.
 ```{r}
 # Data types to select
 types <- list("ACi", "AQ", c("ACi", "AQ"))
-
+types <-list(c("ACi", "AQ"))
 # Simple model, no fixed or random effects
-model <- list(V.fixed = NULL, V.random = NULL, 
-                  a.fixed = NULL, a.random = NULL, 
-                  k.fixed = NULL, k.random = NULL, 
-                  n.iter = 5000, match = "rep")
+model <- list(V.fixed = NULL, V.random = "leaf", 
+                a.fixed = NULL, a.random = "leaf", 
+                k.fixed = NULL, k.random = NULL, 
+                r.random = "leaf",
+                n.iter = 5000, match = "rep")
 out <- list()
 for(i in 1:length(ids)){ # 10 experiments
   out[[i]] <- list()
-  for(j in 1:3){ # 3 sets of inputs: ACi, AQ, or both
-    out[[i]][[j]] <- list()
-    for(k in 1:3){ # 3 replicate plants per experiment
-        flux.data <- subset(datlist[[i]], rep == paste0("plant_", k) & type %in% types[[j]])
-        out[[i]][[j]][[k]] <- fitA(flux.data = flux.data, pathway = "C4", licor = "6800",
-                                   model = model)
-        print(paste0("Run ", i, "_", j, "_", k, " completed"))
-    }
+  for(j in 1){ # 3 sets of inputs: ACi, AQ, or both
+    flux.data <- subset(datlist[[i]], type %in% types[[j]])
+    out[[i]][[j]] <- fitA(flux.data = flux.data, pathway = "C4", licor = "6800", model = model)
+    print(paste0("Run ", i, "_", j, " completed"))
   }
 }
 
@@ -87,38 +84,29 @@ save(out, file = "outputs/Bayesian_parameter_estimation/out_mcmc.Rdata")
 
 Model diagnostic plots
 ```{r}
-mcmcplots::mcmcplot(out[[10]][[1]][[1]]$params, parms = c("alpha0", "r0", "vmax0"))
+mcmcplots::mcmcplot(out[[10]][[1]]$params, parms = c("alpha0", "r0", "vmax0", "Vleaf", "Kleaf", "Aleaf",
+                                                     "tau", "tau.Vleaf", "tau.Kleaf", "tau.Aleaf", "tau.r0",
+                                                     "Rleaf"))
 ```
 
 Two sets of posteriors are created, $params and $predict. First, summarize the $predict posteriors and align with empirical data. 
 ```{r}
-temp <- data.frame()
-preds1 <- data.frame()
-preds2 <- data.frame()
 preds <- list()
 # Add columns to datlist for each type of output
 for(i in 1:length(ids)){
   preds1 <- data.frame()
   preds2 <- data.frame()
   for(j in 1:2){# For types = ACi or AQ, stack
-    temp <- data.frame()
-    for(k in 1:3){
-      sumDF <- coda.fast(out[[i]][[j]][[k]]$predict)[
-        grep("pA", row.names(coda.fast(out[[i]][[j]][[k]]$predict))), c(1, 3:5)
-      ]
-      temp <- rbind.data.frame(temp, sumDF)
-    }
-    preds1 <- rbind.data.frame(preds1, temp)
+    sumDF <- coda.fast(out[[i]][[j]]$predict)[
+        grep("pA", row.names(coda.fast(out[[i]][[j]]$predict))), c(1, 3:5)
+    ]
+    preds1 <- rbind.data.frame(preds1, sumDF)
   }  
-  for(j in 3){
-    temp <- data.frame()
-    for(k in 1:3){# For types = Aci and AQ, as is
-      sumDF <- coda.fast(out[[i]][[j]][[k]]$predict)[
-        grep("pA", row.names(coda.fast(out[[i]][[j]][[k]]$predict))), c(1, 3:5)
-      ]
-      temp <- rbind.data.frame(temp, sumDF)
-    }
-    preds2 <- temp
+  for(j in 3){# For types = Aci and AQ, as is
+    sumDF <- coda.fast(out[[i]][[j]]$predict)[
+      grep("pA", row.names(coda.fast(out[[i]][[j]]$predict))), c(1, 3:5)
+    ]
+    preds2 <- sumDF
   }
   
   # add to existing data as new columns
@@ -193,17 +181,51 @@ types <- c("ACi", "AQ", "both")
 master <- data.frame()
 for(i in 1:length(ids)){
   for(j in 1:length(types)){
-    for(k in 1:3){
-      sumDF <- coda.fast(out[[i]][[j]][[k]]$params)
-      sumDF$trait <- row.names(sumDF)
-      sumDF <- subset(sumDF, trait %in% c("vmax0", "r0", "alpha0"))
-      sumDF$ID <- rep(ids[i], nrow(sumDF))
-      sumDF$type <- rep(types[j], nrow(sumDF))
-      sumDF$rep <- rep(paste0("plant_", k), nrow(sumDF))
-      master <- rbind.data.frame(master, sumDF)
-    }
+    sumDF <- coda.fast(out[[i]][[j]]$params)
+    sumDF$trait2 <- row.names(sumDF)
+    sumDF <- sumDF[c(grep("V[", fixed = T, sumDF$trait),
+                     grep("A[", fixed = T, sumDF$trait),
+                     grep("K[", fixed = T, sumDF$trait),
+                     grep("r0", fixed = T, sumDF$trait)),]
+    sumDF$ID <- rep(ids[i], nrow(sumDF))
+    sumDF$type <- rep(types[j], nrow(sumDF))
+    sumDF$trait <- c(rep("vmax", 3), rep("AQY", 3),"Rd")
+    sumDF$rep <- c(rep(c("plant_1", "plant_2", "plant_3"), 2), "all")
+    master <- rbind.data.frame(master, sumDF)
   }
 }
+```
+
+For Rd only, when comparing population vs. plant level parameters.
+```{r}
+params <- read.csv("outputs/parameters_data.csv")
+add <- subset(params, select = c(ID, rep, trait, Value, SE, SD))
+add <- subset(add, trait == "Rd" & ID %in% ids)
+plot(tapply(add$Value, add$ID, mean)[1:10], master$mean[master$type == "both" & master$trait == "Rd"])
+abline(a = 1, b = 0, col = "red")
+```
+
+Plot traits for each experiment. 
+```{r}
+for(i in 1:10){
+sub <- subset(master, ID == ids[i])
+fig1 <- ggplot(sub)+
+  geom_point(aes(x = type, y = mean, color = rep), position = position_dodge(width = 0.5))+
+  # geom_pointrange(aes(x = type, y = mean, ymin = pc2.5, ymax = pc97.5, color = rep),
+  #                 position = position_dodge(width = 0.5))+
+  facet_wrap(~ trait, scales  = "free_y")+
+  theme_bw(base_size = 12)
+print(fig1)
+
+sub2 <- subset(master, ID == ids[i] & type == "both")
+fig2 <- ggplot(sub2)+
+  geom_pointrange(aes(x = rep, y = mean, ymin = pc2.5, ymax = pc97.5),
+                  position = position_dodge(width = 0.5))+
+  facet_wrap(~ trait, scales  = "free_y")+
+  theme_bw(base_size = 12)
+print(fig2)
+}
+
 ```
 
 Add in traits from Tonantzin's workflow. 
@@ -215,9 +237,7 @@ add <- subset(add, trait %in% c("vmax", "Rd", "AQY") & ID %in% ids)
 
 # Convert traits in master to the same
 masterDF <- master %>%
-  mutate(trait = case_when(trait == "vmax0" ~ "vmax", 
-                           trait == "alpha0" ~ "AQY",
-                           trait == "r0" ~ "Rd")) %>%
+  filter(trait != "k")%>%
   left_join(add, by = c("ID", "rep", "trait")) %>%
   select(ID, rep, type, trait, 
          Value, SE, SD, # traits estimated from Tonantzin's workflow
@@ -238,8 +258,7 @@ fig1 <- ggplot(vmaxDF)+
   scale_x_continuous(expression(paste(V[max], " (T)")))+
   scale_y_continuous(expression(paste(V[max], " (fitA)")))+
   facet_wrap(~type)+
-  theme_bw(base_size = 14)+
-  coord_fixed()
+  theme_bw(base_size = 14)
 print(fig1)
 
 aqyDF <- subset(masterDF, trait == "AQY")
@@ -250,9 +269,8 @@ fig2 <- ggplot(aqyDF)+
   geom_errorbarh(aes(y = mean, xmin = Value - S2, xmax = Value + S2))+
   scale_x_continuous(expression(paste(alpha, " (T)")))+
   scale_y_continuous(expression(paste(alpha, " (ftA)")))+
-  facet_wrap(~type)+
-  theme_bw(base_size = 14)+
-  coord_fixed()
+  facet_wrap(~type, scales = "free_y")+
+  theme_bw(base_size = 14)
 print(fig2)
 
 rdDF <- subset(masterDF, trait == "Rd")
@@ -263,13 +281,48 @@ fig3 <- ggplot(rdDF)+
   geom_errorbarh(aes(y = mean, xmin = Value - S2, xmax = Value + S2))+
   scale_x_continuous(expression(paste(R[d], " (T)")))+
   scale_y_continuous(expression(paste(R[d], " (fitA)")))+
-  facet_wrap(~type)+
-  theme_bw(base_size = 14)+
-  coord_fixed()
+  facet_wrap(~type, scales = "free_y")+
+  theme_bw(base_size = 14)
 print(fig3)
 
+jpeg(filename = "outputs/Bayesian_parameter_estimation/comparison_plots.jpg",
+     height = 8, width = 8, units = "in", res = 600)
+multiplot(fig1, fig2, fig3, cols = 1)
+dev.off()
 ```
 
+Create ACi vs both for vmax, and AQ vs both for alpha and Rd
+```{r}
+#ACi vs both data sets, compare vmax
+vmaxcomp <- masterDF %>%
+  filter(trait == "vmax" & type %in% c("ACi", "both")) %>%
+  select(-Value, -SD, -SE, -median, -sd, -pc2.5, -pc97.5, -S2) %>%
+  spread(type, mean)
+fig_vmaxcomp <- ggplot(vmaxcomp, aes(x = ACi, y = both))+
+  geom_abline(slope = 1, intercept = 0, col = "red")+
+  geom_point()
+fig_vmaxcomp
+
+#AQ vs both data sets, compare AQY
+aqycomp <- masterDF %>%
+  filter(trait == "AQY" & type %in% c("AQ", "both")) %>%
+  select(-Value, -SD, -SE, -median, -sd, -pc2.5, -pc97.5, -S2) %>%
+  spread(type, mean)
+fig_aqycomp<- ggplot(aqycomp, aes(x = AQ, y = both))+
+  geom_abline(slope = 1, intercept = 0, col = "red")+
+  geom_point()
+fig_aqycomp
+
+#AQ vs both data sets, compare Rd
+rdcomp <- masterDF %>%
+  filter(trait == "Rd" & type %in% c("AQ", "both")) %>%
+  select(-Value, -SD, -SE, -median, -sd, -pc2.5, -pc97.5, -S2) %>%
+  spread(type, mean)
+fig_rdcomp<- ggplot(rdcomp, aes(x = AQ, y = both))+
+  geom_abline(slope = 1, intercept = 0, col = "red")+
+  geom_point()
+fig_rdcomp
+```
 
 #initial test, null model
 flux.data = dat
